updated whole application a few changes and a new flyway